--- a/SpikaEnterprise/res/drawable/selector_record_audio.xml
+++ b/SpikaEnterprise/res/drawable/selector_record_audio.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <item android:drawable="@drawable/icon_audio_rec" android:state_pressed="true"/> <!-- pressed -->
-    <item android:drawable="@drawable/icon_audio_rec" android:state_focused="true"/> <!-- focused -->
-    <item android:drawable="@drawable/icon_audio_start"/> <!-- default -->
+    <item android:drawable="@drawable/voice_recording_pressed" android:state_pressed="true"/> <!-- pressed -->
+    <item android:drawable="@drawable/voice_recording_pressed" android:state_focused="true"/> <!-- focused -->
+    <item android:drawable="@drawable/voice_recording"/> <!-- default -->
 
 </selector>
