--- a/SpikaEnterprise/res/layout/item_invite_person.xml
+++ b/SpikaEnterprise/res/layout/item_invite_person.xml
@@ -13,15 +13,15 @@
 
         <RelativeLayout
             android:id="@+id/imageLayout"
-            android:layout_width="35dp"
-            android:layout_height="50dp"
+            android:layout_width="55dp"
+            android:layout_height="55dp"
             android:layout_centerVertical="true"
             android:layout_marginRight="10dp" >
 
             <com.clover.spika.enterprise.chat.views.RoundImageView
                 android:id="@+id/userImage"
-                android:layout_width="35dp"
-                android:layout_height="35dp"
+                android:layout_width="50dp"
+                android:layout_height="50dp"
                 android:layout_marginBottom="5dp"
                 android:layout_marginTop="5dp"
                 android:contentDescription="@null" />
@@ -40,6 +40,8 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_centerVertical="true"
+            android:id="@+id/personLayout"
+            android:paddingLeft="5dp"
             android:layout_toLeftOf="@+id/imageLayoutControl"
             android:layout_toRightOf="@+id/imageLayout"
             android:orientation="vertical" >
@@ -86,6 +88,13 @@
                 android:checked="false"
                 android:padding="15dp" />
         </RelativeLayout>
+        
+        <View android:id="@+id/line"
+            android:layout_width="match_parent"
+            android:layout_toRightOf="@id/imageLayout"
+            android:layout_height="1dp"
+            android:background="@color/light_light_gray"
+            android:layout_below="@id/imageLayout"/>
     </RelativeLayout>
 
 </RelativeLayout>
