--- a/SpikaEnterprise/res/layout/item_lobby.xml
+++ b/SpikaEnterprise/res/layout/item_lobby.xml
@@ -38,7 +38,7 @@
             android:textSize="12sp"
             android:textStyle="bold" />
 
-        <RelativeLayout
+        <FrameLayout
             android:layout_width="match_parent"
             android:id="@+id/textContent"
             android:layout_height="wrap_content"
@@ -66,7 +66,7 @@
                 android:id="@+id/lastMessage"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_alignParentBottom="true"
+                android:layout_gravity="bottom"
                 android:layout_marginBottom="10dp"
                 android:ellipsize="end"
                 android:maxLines="1"
@@ -75,7 +75,7 @@
                 android:textColor="@color/black"
                 android:textSize="17sp"
                 android:textStyle="bold" />
-        </RelativeLayout>
+        </FrameLayout>
 
         <View
             android:layout_alignLeft="@id/textContent"
