--- a/SpikaEnterprise/res/layout/activity_record_audio.xml
+++ b/SpikaEnterprise/res/layout/activity_record_audio.xml
@@ -122,8 +122,7 @@
             android:thumb="@drawable/shape_thumb"
             android:layout_toRightOf="@+id/firstChrono"
             android:layout_toLeftOf="@+id/secondChrono"
-            android:progress="0"
-            android:progressDrawable="@drawable/progress_bar_voice" />
+            android:progress="0"/>
         
         <TextView
             android:id="@+id/secondChrono"
