--- a/SpikaEnterprise/res/layout/activity_record_video.xml
+++ b/SpikaEnterprise/res/layout/activity_record_video.xml
@@ -7,7 +7,7 @@
     <RelativeLayout
         android:id="@+id/topLayout"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="@dimen/menu_height"
         android:layout_alignParentTop="true" >
 
         <ImageButton
@@ -43,56 +43,59 @@
             android:src="@android:drawable/ic_menu_send" />
     </RelativeLayout>
 
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:layout_below="@id/topLayout"
+        android:background="#66000000" />
+
     <RelativeLayout
-        android:id="@+id/wrraper"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_above="@+id/soundControler"
-        android:layout_below="@id/topLayout" >
+        android:layout_below="@id/topLayout"
+        android:layout_marginBottom="80dp"
+        android:padding="20dp" >
 
-        <VideoView
-            android:id="@+id/videoView"
+        <RelativeLayout
+            android:id="@+id/wrraper"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:background="@android:color/black" >
+
+            <VideoView
+                android:id="@+id/videoView"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_centerInParent="true" />
+        </RelativeLayout>
+
+        <RelativeLayout
+            android:id="@+id/soundControler"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_centerInParent="true"
-            android:layout_margin="20dp" />
-    </RelativeLayout>
+            android:layout_alignParentBottom="true"
+            android:background="@color/gray_trans"
+            android:padding="5dp" >
 
-    <RelativeLayout
-        android:id="@+id/soundControler"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_marginBottom="20dp" >
+            <ImageView
+                android:id="@+id/ivPlayPause"
+                android:layout_width="30dp"
+                android:layout_height="30dp"
+                android:layout_marginLeft="10dp"
+                android:contentDescription="@null"
+                android:src="@drawable/play_btn_selector" />
 
-        <ImageView
-            android:id="@+id/ivStopSound"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentLeft="true"
-            android:layout_marginRight="2dp"
-            android:contentDescription="@null"
-            android:src="@drawable/stop_btn" />
-
-        <ImageView
-            android:id="@+id/ivPlayPause"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_toRightOf="@+id/ivStopSound"
-            android:contentDescription="@null"
-            android:src="@drawable/play_btn" />
-
-        <ProgressBar
-            android:id="@+id/progressBar"
-            style="?android:attr/progressBarStyleHorizontal"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_alignBottom="@+id/ivPlayPause"
-            android:layout_alignTop="@+id/ivPlayPause"
-            android:layout_marginLeft="2dp"
-            android:layout_toRightOf="@+id/ivPlayPause"
-            android:progress="0"
-            android:progressDrawable="@drawable/progress_bar_voice" />
+            <ProgressBar
+                android:id="@+id/progressBar"
+                style="?android:attr/progressBarStyleHorizontal"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_centerVertical="true"
+                android:layout_marginRight="10dp"
+                android:layout_marginLeft="15dp"
+                android:layout_toRightOf="@+id/ivPlayPause"
+                android:progress="0" />
+        </RelativeLayout>
     </RelativeLayout>
 
 </RelativeLayout>
