--- a/SpikaEnterprise/res/layout/item_lobby.xml
+++ b/SpikaEnterprise/res/layout/item_lobby.xml
@@ -13,10 +13,11 @@
 
         <com.clover.spika.enterprise.chat.views.RoundImageView
             android:id="@+id/recentImage"
-            android:layout_width="75dp"
-            android:layout_height="75dp"
+            android:layout_width="65dp"
+            android:layout_height="65dp"
             android:layout_marginBottom="10dp"
             android:layout_marginTop="10dp"
+            android:padding="1dp"
             android:contentDescription="@null"
             android:src="@drawable/default_user_image" />
 
@@ -33,14 +34,14 @@
             android:minHeight="25dp"
             android:minWidth="25dp"
             android:text="!"
-            android:visibility="gone"
             android:textColor="@color/white"
             android:textSize="12sp"
-            android:textStyle="bold" />
+            android:textStyle="bold"
+            android:visibility="gone" />
 
         <FrameLayout
-            android:layout_width="match_parent"
             android:id="@+id/textContent"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_alignBottom="@id/recentImage"
             android:layout_alignTop="@id/recentImage"
@@ -49,18 +50,39 @@
             android:layout_toRightOf="@id/recentImage"
             android:orientation="vertical" >
 
-            <com.clover.spika.enterprise.chat.views.RobotoRegularTextView
-                android:id="@+id/recentName"
-                android:layout_width="wrap_content"
+            <RelativeLayout
+                android:id="@+id/nameAndTimeStampOfLastMessage"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:ellipsize="end"
-                android:maxLines="1"
-                android:paddingRight="5dp"
-                android:paddingLeft="5dp"
-                android:layout_marginTop="5dp"
-                android:textColor="@color/black"
-                android:textSize="20sp"
-                android:textStyle="bold" />
+                android:layout_marginTop="5dp" >
+
+                <com.clover.spika.enterprise.chat.views.RobotoRegularTextView
+                    android:id="@+id/recentName"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:ellipsize="end"
+                    android:maxLines="1"
+                    android:paddingLeft="5dp"
+                    android:paddingRight="10dp"
+                    android:textColor="@color/black"
+                    android:layout_toLeftOf="@+id/lastMessageTime"
+                    android:textSize="18sp"
+                    android:textStyle="bold" />
+
+                <com.clover.spika.enterprise.chat.views.RobotoRegularTextView
+                    android:id="@+id/lastMessageTime"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:ellipsize="end"
+                    android:gravity="center_vertical"
+                    android:layout_centerVertical="true"
+                    android:maxLines="1"
+                    android:paddingLeft="5dp"
+                    android:paddingRight="10dp"
+                    android:layout_alignParentRight="true"
+                    android:textColor="@color/text_dark_gray"
+                    android:textSize="15sp" />
+            </RelativeLayout>
 
             <com.clover.spika.enterprise.chat.views.RobotoRegularTextView
                 android:id="@+id/lastMessage"
@@ -70,17 +92,16 @@
                 android:layout_marginBottom="10dp"
                 android:ellipsize="end"
                 android:maxLines="1"
-                android:paddingRight="5dp"
                 android:paddingLeft="5dp"
-                android:textColor="@color/black"
-                android:textSize="17sp"
-                android:textStyle="bold" />
+                android:paddingRight="20dp"
+                android:textColor="@color/text_dark_gray"
+                android:textSize="15sp"/>
         </FrameLayout>
 
         <View
-            android:layout_alignLeft="@id/textContent"
             android:layout_width="match_parent"
             android:layout_height="1dp"
+            android:layout_alignLeft="@id/textContent"
             android:layout_below="@id/textContent"
             android:layout_marginTop="5dp"
             android:background="@color/light_light_gray" />
